...
        android:layout_width="88dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_unit_time">

        <RadioButton
            android:id="@+id/chbx_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Seconds"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_unit_time" />

        <RadioButton
            android:id="@+id/chkbx_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Minutes"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chbx_seconds" />

        <RadioButton
            android:id="@+id/chkbx_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hours"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkbx_minutes" />

        <RadioButton
            android:id="@+id/chkbx_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Days"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_unit_speed"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/chkbx_meterPerSec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/metersPerSec"
            app:layout_constraintTop_toBottomOf="@+id/tv_unit_speed" />

        <RadioButton
            android:id="@+id/chkbx_kmh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="@string/kilometersPerHour"
            app:layout_constraintTop_toBottomOf="@+id/chkbx_meterPerSec" />

        <RadioButton
            android:id="@+id/chkbx_mph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="@string/milesPerHour"
            app:layout_constraintTop_toBottomOf="@+id/chkbx_kmh" />

        <RadioButton
            android:id="@+id/chkbx_minPermile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="@string/minutesPerMile"
            app:layout_constraintTop_toBottomOf="@+id/chkbx_mph" />
...
        android:layout_marginTop="32dp"
        android:text="Latitude:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="0.00"
        app:layout_constraintStart_toEndOf="@+id/tv_labellat"
        app:layout_constraintTop_toTopOf="parent" />
...
        android:layout_marginTop="16dp"
        android:text="Longitude:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labellat" />

    <TextView
        android:id="@+id/tv_lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0.00"
        app:layout_constraintStart_toEndOf="@+id/tv_labellon"
        app:layout_constraintTop_toBottomOf="@+id/tv_lat" />
...
        android:layout_marginTop="16dp"
        android:text="Speed:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labellon" />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.00"
        app:layout_constraintStart_toEndOf="@+id/tv_labelspeed"
        app:layout_constraintTop_toTopOf="@+id/tv_labelspeed" />

...
        android:layout_marginTop="16dp"
        android:text="Time Elapsed:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labelacc" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0.00"
        app:layout_constraintStart_toEndOf="@+id/tv_labeltime"
        app:layout_constraintTop_toBottomOf="@+id/tv_labelacc" />
...
        android:layout_marginTop="16dp"
        android:text="Altitude:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labeltime" />

    <TextView
        android:id="@+id/tv_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0.00"
        app:layout_constraintStart_toEndOf="@+id/tv_labelalt"
        app:layout_constraintTop_toBottomOf="@+id/tv_labeltime" />
...
        android:layout_marginTop="16dp"
        android:text="Distance Traveled:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labelalt" />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0.00"
        app:layout_constraintStart_toEndOf="@+id/tv_labeldistance"
        app:layout_constraintTop_toBottomOf="@+id/tv_labelalt" />
...

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Help"
        app:layout_constraintStart_toEndOf="@+id/sw_test"
        app:layout_constraintTop_toBottomOf="@+id/rg_altitutdeUnits" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        app:layout_constraintStart_toEndOf="@+id/help_button"
        app:layout_constraintTop_toTopOf="@+id/help_button" />

...
